<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Logininja</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configuração</string>
    <string name="configuration_titlle">Login</string>
    <string name="user_name">E-mail</string>
    <string name="user_password">Senha</string>
    <string name="footer"> Copyright \u00A9 Logininja 2015</string>
    <string name="title_home">RECONNECT</string>
    <string name="preference_file_key">com.example.reconnect.PREFERENCE_RECONNECT_KEY</string>
    <string name="key_user_name">nameKey</string>
    <string name="key_user_password">passwordKey</string>
    <string name="key_user_agree">agreeKey</string>
    <string name="account_title">Conta</string>
    <string name="save_profile">Salvar Perfil</string>
    <string name="agree_text">Aceitar Termo</string>
    <string name="user_title">Usuario</string>
    <string name="invalid_password">Precisa inserir uma senha</string>
    <string name="invalid_username" >E-mail Invalido</string>

    <string name="action_share">Indicar para um amigo</string>

    <string name="action_about">Sobre</string>
    <string name="action_feedback">Fale Conosco</string>
    <string name="about_title">Sobre</string>



    <string name="title_button_dialog">Ok</string>
    <string name="alert_dialog">Alerta</string>
    <string name="message_dialog">Opa, voce precisa aceitar o termo do login</string>


    <string name="action_notifications">Notificações</string>
    <string name="action_account">Conta</string>

<string name="email_support">gonzales4r@hotmail.com</string>
    <string name="send_choose">Escolha o cliente</string>

    <string name="internet_online">ONLINE</string>
    <string name="internet_offline">OFFLINE</string>
    <string name="internet_state">Verificando internet...</string>
    <string name="agree_errror">Precisa aceitar termo</string>
    <string name="sendMail_label">Enviar Feedback</string>
    <string name="aviso">Voce foi conectado</string>
    <string name="titulo">Reconnect</string>
    <string name="remote_service_label">teste</string>


</resources>
