<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".">


    <!-- Account Action -->
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/action_account"
        app:showAsAction="ifRoom" />

    <!-- Notification Action -->
    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/action_notifications"
        app:showAsAction="ifRoom" />

    <!-- Settings Action
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" /> -->

    <!-- About Action -->

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <!-- FeedBack Action -->
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/action_feedback"
        app:showAsAction="never" />

</menu>
